# app/page_index.go
@@ -7,17 +7,6 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-// HandlerLogin  godoc
-// @Tags         public
-// @Description  index test
-// @Accept       json
-// @Produce      json
-// @Param data body models.UserLoginForm  true "Email & Password"
-// @Success      204 {object} models.Token
-// @Failure      401 {object} models.AppError
-// @Failure      422 {object} models.AppError
-// @Failure      500 {object} models.AppError "Response JSON"
-// @Router       /bl-api/page/v1/ [get]
 func (app *App) PageIndex(res http.ResponseWriter, req *http.Request) {
 	//app.printError(res, http.StatusInternalServerError, 200, nil, "")
 
@@ -38,9 +27,7 @@ func (app *App) PageIndex(res http.ResponseWriter, req *http.Request) {
 	msg := "TEST"
 
 	//msg := "TEST"
-	sessionStore := req.Context().Value(ContextSessionStoreKey{}).(*session.Store)
-
-	sess := *sessionStore
+	sess := session.GetSession(req)
 	logrus.Info(sess.Get("test-session"))
 
 	logrus.Info(sess.Get("user_id"))
